# pray

./: .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  hello.py  mise.toml  pyproject.toml
R/: pray.R
man/: shinto.Rd
python/: pray.py
src/pray/: __init__.py
